tests/paczka1/fuzzy1/41818288.err
Error in line 8: 4IidvlL S196 84,5
Error in line 4: S196 S259 73,3
Error in line 15: JYGT S259 32,7
Error in line 21: 4IidvlL S196 -1,8
Error in line 19: JYGT S772 32,2
Error in line 30: JYGT S259 33,53
Error in line 20: 4IidvlL S196 6,6
Error in line 29: JYGT S259 7,3
